# cache-eviction-thesis

./: .gitignore  README.md  main.tex
code/: CMakeLists.txt
code/_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
code/data/: alpha_0.2_objects_10000_requests_100000(1).txt  alpha_0.2_objects_10000_requests_100000(10).txt  alpha_0.2_objects_10000_requests_100000(11).txt  alpha_0.2_objects_10000_requests_100000(12).txt  alpha_0.2_objects_10000_requests_100000(13).txt  alpha_0.2_objects_10000_requests_100000(14).txt  alpha_0.2_objects_10000_requests_100000(15).txt  alpha_0.2_objects_10000_requests_100000(16).txt  alpha_0.2_objects_10000_requests_100000(17).txt  alpha_0.2_objects_10000_requests_100000(18).txt  alpha_0.2_objects_10000_requests_100000(19).txt  alpha_0.2_objects_10000_requests_100000(2).txt  alpha_0.2_objects_10000_requests_100000(3).txt  alpha_0.2_objects_10000_requests_100000(4).txt  alpha_0.2_objects_10000_requests_100000(5).txt  alpha_0.2_objects_10000_requests_100000(6).txt  alpha_0.2_objects_10000_requests_100000(7).txt  alpha_0.2_objects_10000_requests_100000(8).txt  alpha_0.2_objects_10000_requests_100000(9).txt  (+1581 more)
code/libCacheSim/cache/: CMakeLists.txt  cache.c  cacheObj.c  plugin.c
code/libCacheSim/cache/admission/adaptsize/: adaptsize.cpp  adaptsize_interface.cpp
code/libCacheSim/cache/eviction/: ARC.c  Belady.c  BeladySize.c  CAR.c  CMakeLists.txt  Cacheus.c  Clock.c  ClockPro.c  FIFO.c  FIFO_Merge.c  FIFO_Reinsertion.c  Hyperbolic.c  LFUDA.c  LIRS.c  LRUProb.c  LRUv0.c  LeCaRv0.c  MRU.c  QDLP.c  RandomLRU.c  S3FIFO.c  S3FIFOd.c  S3FIFOv0.c  SLRU.c  SLRUv0.c  SR_LRU.c  Size.c  TwoQ.c  WTinyLFU.c  myFIFO.c  myFIFO.h  myHelpers.h  myLRU.c  myLRU.h  mySieve.c  mySieve.h
code/libCacheSim/cache/eviction/3LCache/: cache.h
code/libCacheSim/cache/eviction/GLCache/: GLCache.c
code/libCacheSim/cache/eviction/LHD/: LHD_Interface.cpp
code/libCacheSim/cache/eviction/LRB/: cache.h  lrb.h
code/libCacheSim/cache/eviction/belady/: FIFO_Belady.c  Sieve_Belady.c
code/libCacheSim/cache/eviction/cpp/: GDSF.cpp  abstractRank.hpp
code/libCacheSim/cache/eviction/fifo/: LP_ARC.c  LP_SFIFO.c  LP_TwoQ.c  SFIFO.c
code/libCacheSim/cache/eviction/other/: flashProb.c
code/libCacheSim/cache/eviction/priv/: MClock.c  QDLPv0.c  S3FIFOdv2.c
code/libCacheSim/cache/prefetch/: Mithril.c  OBL.c  PG.c
report/: main.tex
sections/: background.tex  introduction.tex  references.tex
tables/: mean_miss_ratio_by_algorithm_alpha.csv  miss_ratio_by_working_set_size.csv  miss_ratio_statistics_by_algorithm.csv
(+1744 files in other folders)
